Improve version & accuracy of profiler and account for Virtual Threads scalability issues